Revert "Removed potentially dead midend code"
This reverts commit f9e8ad7bd34ea0db3daee2a3cb315b7a3608ec8f.

--- a/src/midend/astProcessing/CMakeLists.txt
+++ b/src/midend/astProcessing/CMakeLists.txt
@@ -32,13 +32,10 @@ set(files_to_install
   AstReverseSimpleProcessing.h AstRestructure.h AstClearVisitFlags.h
   AstTraversal.h AstCombinedProcessing.h AstCombinedProcessingImpl.h
   AstCombinedSimpleProcessing.h StackFrameVector.h
-  #graphProcessing.h
-  #graphProcessingSgIncGraph.h
-  #graphTemplate.h
+  graphProcessing.h graphProcessingSgIncGraph.h graphTemplate.h
   AstSharedMemoryParallelProcessing.h AstSharedMemoryParallelProcessingImpl.h
   AstSharedMemoryParallelSimpleProcessing.h
-  #SgGraphTemplate.h
-  TreeTraversal.h)
+  SgGraphTemplate.h TreeTraversal.h)
 
 if(NOT WIN32)
   #tps commented out AstSharedMemoryParallelProcessing.h for Windows
