--- a/src/midend/programTransformation/CMakeLists.txt
+++ b/src/midend/programTransformation/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(astInlining)
 add_subdirectory(astOutlining)
 add_subdirectory(ompLowering)
 add_subdirectory(transformationTracking)
+add_subdirectory(extractFunctionArgumentsNormalization)
 add_subdirectory(singleStatementToBlockNormalization)
 if(NOT enable-internalFrontendDevelopment)
   add_subdirectory(loopProcessing)
