--- a/src/frontend/SageIII/astTokenStream/Makefile.am
+++ b/src/frontend/SageIII/astTokenStream/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 AM_CPPFLAGS = $(ROSE_INCLUDES)
 
-if ROSE_USE_BOOST_WAVE
+#if ROSE_USE_BOOST_WAVE
 
 # DQ (10/27/2013): Commented out for now from this Makefile.am (experimenting with replacing with new implementation independent of WAVE).
 # libastTokenStream_la_SOURCES      = createMap.C  doCompleteMapping.C  linearizeAST.C unparseMacro.C
@@ -10,7 +10,7 @@ if ROSE_USE_BOOST_WAVE
 # libastTokenStream_la_DEPENDENCIES = 
 # include_HEADERS = createMap.h  doCompleteMapping.h  linearizeAST.h unparseMacro.h
 
-endif
+#endif
 
 
 # DQ (10/27/2013): This is a new definition of libastTokenStream
