--- a/config/Makefile.for.ROSE.includes.and.libs
+++ b/config/Makefile.for.ROSE.includes.and.libs
@@ -32,13 +32,6 @@ if USE_ROSE_IN_BUILD_TREE_VAR
 export ROSE_IN_BUILD_TREE=$(top_builddir)
 endif
 
-# DQ (12/22/2008): Specification of Boost path for use with "-isystem" option (may be GNU
-# specific).  We use this option only if the configuration of ROSE has detected a
-# previously installed version of Boost (which we do not want to use).
-# Note that only one of these will be non-empty makefile variables.
-ROSE_BOOST_PREINCLUDE_PATH        = @ROSE_BOOST_PREINCLUDE_PATH@
-ROSE_BOOST_NORMAL_INCLUDE_PATH    = @ROSE_BOOST_NORMAL_INCLUDE_PATH@
-
 # This is properly handled by automake even when specified in an include file
 EDG_LIBS = @EDG_LIBS@
 
@@ -129,8 +122,7 @@ ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH_ROSE_USE_INTERNAL_FRONTEND_DEVELOPMENT 
      -I$(top_srcdir)/src/midend/programAnalysis \
      -I$(top_srcdir)/src/3rdPartyLibraries/json \
      -I$(top_srcdir)/src/util/graphs \
-     $(ROSE_FLANG_INCLUDES) \
-     $(ROSE_BOOST_NORMAL_INCLUDE_PATH)
+     $(ROSE_FLANG_INCLUDES)
 # else # ROSE_USE_INTERNAL_FRONTEND_DEVELOPMENT
 # ROSE_INCLUDES =
 #     $(ROSE_BOOST_PREINCLUDE_PATH)
@@ -209,9 +201,7 @@ ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH = \
      -I$(top_srcdir)/src/midend/astUtil/astInterface \
      -I$(top_srcdir)/libltdl \
      $(VALGRIND_CFLAGS) \
-     $(ROSE_BOOST_NORMAL_INCLUDE_PATH) \
-     $(ROSE_PCH_INCLUDE) \
-     $(BOOST_CPPFLAGS)
+     $(ROSE_PCH_INCLUDE)
 # endif # ROSE_USE_INTERNAL_FRONTEND_DEVELOPMENT
 
 # DQ (10/23/2015): These paths have been replaces with the following variables.
@@ -223,12 +213,7 @@ ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH = \
 #    $(ROSE_CLANG_INCLUDE)
 
 SWIG_ROSE_INCLUDES = $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
-ROSE_INCLUDES = -I$(top_builddir) -I$(top_builddir)/src $(ROSE_BOOST_PREINCLUDE_PATH) $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
-
-# DQ (12/22/2008): Move Boost directory to front and used "-isystem" option so
-# that a system with a previous (older) installation of boost does not interfer
-# with the use of ROSE (and the version of boost specified using "--with-boost").
-# $(BOOST_CPPFLAGS)
+ROSE_INCLUDES = -I$(top_builddir) -I$(top_builddir)/src $(ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH)
 
 # DQ (10/28/2008): I think these should be included, I don't know why they
 # were removed (used with Microsoft Windows tests, and Yices tests).
@@ -244,17 +229,7 @@ ROSE_INCLUDES = -I$(top_builddir) -I$(top_builddir)/src $(ROSE_BOOST_PREINCLUDE_
 # JJW 7/25/2008: This should probably just be the same as ROSE_LIBS
 ROSE_LIBS_WITH_PATH = $(ROSE_LIBS)
 
-# ROSE_LIBS = $(top_builddir)/src/librose.la -lm $(LEXLIB) $(WAVE_LDFLAGS) $(WAVE_LIBRARIES) $(WAVE_LIBS) $(JAVA_JVM_LIB) $(RT_LIBS)
-
-# MS 10/19/2015: added ROSE_BOOST_LIBS variable to share exact same
-# boost libs list in ROSE an in the ROSTTA Makefiles.
-ROSE_BOOST_LIBS=$(BOOST_LDFLAGS) $(BOOST_DATE_TIME_LIB) $(BOOST_CHRONO_LIB) \
-  $(BOOST_THREAD_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) \
-  $(BOOST_RANDOM_LIB) $(BOOST_REGEX_LIB)  $(BOOST_SYSTEM_LIB) $(BOOST_SERIALIZATION_LIB)  \
-  $(BOOST_WAVE_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_ATOMIC_LIB)
-
 ROSE_LIBS = $(abspath $(top_builddir)/src/librose.la) -lm $(JAVA_JVM_LINK) \
-  $(ROSE_BOOST_LIBS) \
   $(RT_LIBS) \
   $(ROSE_INTEL_COMPILER_MATH_LIBS) \
   $(ROSE_QUAD_FLOAT_MATH)
