--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -30,7 +30,7 @@ noinst_LTLIBRARIES = libroseutil.la
 libroseutil_la_SOURCES =			\
 	processSupport.C			\
 	rose_getline.C				\
-	rose_strtoull.C mlog.C FileSystem.C
+	rose_strtoull.C mlog.C FileSystem.C Unique.C
 
 nodist_libroseutil_la_SOURCES = rose_paths.C
 libroseutil_la_LIBADD = \
@@ -54,7 +54,7 @@ pkginclude_HEADERS =				\
 	rose_isnan.h				\
 	rose_paths.h				\
 	rose_strtoull.h				\
-	mlog.h FileSystem.h
+	mlog.h FileSystem.h Unique.h
 
 EXTRA_DIST = CMakeLists.txt utilDocumentation.docs
 
