deBoost: remove boost usage in src/frontend/SageIII, WIP. done with subfolder files, but not the top folder

--- a/src/util/StringUtility/Makefile.am
+++ b/src/util/StringUtility/Makefile.am
@@ -23,6 +23,7 @@ pkginclude_HEADERS = \
 	Convert.h					\
 	Escape.h					\
 	FileUtility.h								\
+	IntegerOps.h								\
 	NumberToString.h				\
 	Predicate.h					\
 	Replace.h					\
