--- a/src/midend/astProcessing/Makefile.am-recursive
+++ b/src/midend/astProcessing/Makefile.am-recursive
@@ -15,8 +15,8 @@ include_HEADERS = \
    AstReverseSimpleProcessing.h AstRestructure.h AstClearVisitFlags.h \
    AstTraversal.h AstCombinedProcessing.h AstCombinedProcessingImpl.h \
    AstCombinedSimpleProcessing.h StackFrameVector.h AstSharedMemoryParallelProcessing.h \
-   AstSharedMemoryParallelProcessingImpl.h AstSharedMemoryParallelSimpleProcessing.h graphProcessing.h \
-   graphTemplate.h SgGraphTemplate.h TreeTraversal.h plugin.h
+   AstSharedMemoryParallelProcessingImpl.h AstSharedMemoryParallelSimpleProcessing.h \
+   TreeTraversal.h plugin.h
 
 
 libastprocessingSources = \
