--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-20.04]
+        os: [ubuntu-24.04]
         gnu: [9]
 
     runs-on: ${{ matrix.os }}
@@ -24,11 +24,13 @@ jobs:
       LD_LIBRARY_PATH: /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server:/usr/lib/x86_64-linux-gnu
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: '8'
+        java-version: '11'
+    # NOTE: Ubuntu 24.04 ships antlr4 v4.9 but antlr4-cpp-runtime v4.10, which are API-incompatible; manually install the matching antlr4 v4.10.
+    - uses: StoneMoe/setup-antlr4@v4.10.1
 
     - name: Checkout submodules
       shell: bash
@@ -40,9 +42,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y openjdk-8-jdk && \
+        sudo apt-get install -y openjdk-11-jdk && \
         sudo apt-get install -y \
-          antlr4 \
           automake \
           autotools-dev \
           bison \
@@ -66,7 +67,7 @@ jobs:
         cd $GITHUB_WORKSPACE
         mkdir ../rex_build
         cd ../rex_build
-        cmake -Denable-c=ON -Denable-fortran=ON -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/../rex_install $GITHUB_WORKSPACE
+        cmake -Denable-c=ON -Denable-fortran=ON -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/../rex_install -Ddisable-tests-directory=ON $GITHUB_WORKSPACE
 
     - name: Build
       run: |
