--- a/exampleTranslators/documentedExamples/simpleTranslatorExamples/CMakeLists.txt
+++ b/exampleTranslators/documentedExamples/simpleTranslatorExamples/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(identityTranslator identityTranslator.C)
+add_executable(identityTranslator identityTranslator.cpp)
 target_link_libraries(identityTranslator ROSE_DLL ${Boost_LIBRARIES})
   install(TARGETS identityTranslator DESTINATION bin)
