--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,6 +21,7 @@ jobs:
     env:
       CC: /usr/bin/gcc-${{ matrix.gnu }}
       CXX: /usr/bin/g++-${{ matrix.gnu }}
+      FC: /usr/bin/gfortran-${{ matrix.gnu }}
       LD_LIBRARY_PATH: /usr/lib/jvm/java-11-openjdk-amd64/lib/server:/usr/lib/x86_64-linux-gnu
 
     steps:
