--- a/.github/workflows/auto_tools.yml
+++ b/.github/workflows/auto_tools.yml
@@ -18,11 +18,6 @@ jobs:
         gnu: [9]
 
     runs-on: ${{ matrix.os }}
-    env:
-      CC: /usr/bin/gcc-${{ matrix.gnu }}
-      CXX: /usr/bin/g++-${{ matrix.gnu }}
-      FC: /usr/bin/gfortran-${{ matrix.gnu }}
-      LD_LIBRARY_PATH: /usr/lib/jvm/java-11-openjdk-amd64/lib/server:/usr/lib/x86_64-linux-gnu
 
     steps:
     - uses: actions/checkout@v4
@@ -40,7 +35,6 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y openjdk-11-jdk && \
         sudo apt-get install -y \
           automake \
           autotools-dev \
@@ -66,6 +60,7 @@ jobs:
         ./build
         mkdir ../rex_build
         cd ../rex_build
+        CC=gcc-${{ matrix.gnu }} CXX=g++-${{ matrix.gnu }} FC=gfortran-${{ matrix.gnu }} \
         $GITHUB_WORKSPACE/configure --prefix=$GITHUB_WORKSPACE/../rex_install --with-boost=/usr --with-boost-libdir=/usr/lib/x86_64-linux-gnu --enable-languages=c,c++,fortran
 
     - name: Build
