--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,7 +96,6 @@ set(rose_LIB_SRCS
   $<TARGET_OBJECTS:util_support>
   $<TARGET_OBJECTS:util_graphs>
   $<TARGET_OBJECTS:unparser>
-  $<TARGET_OBJECTS:EDG>
   $<TARGET_OBJECTS:sage3>
   $<TARGET_OBJECTS:virtualCFG>
   $<TARGET_OBJECTS:astFixup>
@@ -122,11 +121,6 @@ if(NOT enable-internalFrontendDevelopment)
     $<TARGET_OBJECTS:midend_loopproc>)
 endif()
 
-# TODO Conditional either EDG or CLang or nothing
-if(enable-cpp)
-  list(APPEND rose_LIB_SRCS $<TARGET_OBJECTS:edg_internal> $<TARGET_OBJECTS:newsage>)
-endif()
-
 ########################################################################################################################
 # The ROSE library itself (librose.so, librose.a, librose.dll)
 ########################################################################################################################
@@ -137,7 +131,12 @@ add_dependencies(ROSE_DLL roseUtil)
 
 set_target_properties(ROSE_DLL PROPERTIES OUTPUT_NAME "rose")
 
-target_link_libraries(ROSE_DLL ${link_with_libraries})
+# Link EDG library (either real EDG or dummy stubs when using Clang frontend)
+if(enable-c)
+  target_link_libraries(ROSE_DLL EDG ${link_with_libraries})
+else()
+  target_link_libraries(ROSE_DLL ${link_with_libraries})
+endif()
 
 set_target_properties(ROSE_DLL PROPERTIES
   VERSION 1.0.0
@@ -203,7 +202,7 @@ endif ()
 
 # If the C preprocessor is enabled, ROSE has some additional depenendencies
 if(enable-cpp)
-  add_dependencies(ROSE_DLL ROSE_PREPROCESSOR ${edg_lib} libhpdf generate_rosePublicConfig)
+  add_dependencies(ROSE_DLL ROSE_PREPROCESSOR libhpdf generate_rosePublicConfig)
 endif()
 
 ########################################################################################################################
