--- a/tests/nonsmoke/functional/roseTests/programTransformationTests/CMakeLists.txt
+++ b/tests/nonsmoke/functional/roseTests/programTransformationTests/CMakeLists.txt
@@ -5,7 +5,7 @@
 # preTest
 
 add_executable(preTest preTest.C)
-target_link_libraries(preTest ROSE_DLL EDG ${link_with_libraries})
+target_link_libraries(preTest ROSE_DLL ${link_with_libraries})
 
 set(files_to_test pass1.C pass2.C pass3.C)
 foreach(file_to_test ${files_to_test})
@@ -27,7 +27,7 @@ endforeach()
 # patternRewriteTest
 
 add_executable(patternRewriteTest patternRewriteTest.C)
-target_link_libraries(patternRewriteTest ROSE_DLL EDG ${link_with_libraries})
+target_link_libraries(patternRewriteTest ROSE_DLL ${link_with_libraries})
 
 add_test(
   NAME pr_rewrite_test1.C
@@ -70,10 +70,10 @@ endforeach()
 # constantFoldingTest
 
 add_executable(constantFoldingTest constantFoldingTest.C)
-target_link_libraries(constantFoldingTest ROSE_DLL EDG ${link_with_libraries})
+target_link_libraries(constantFoldingTest ROSE_DLL ${link_with_libraries})
 
 add_executable(constantFoldingTest2 constantFoldingTest2.C)
-target_link_libraries(constantFoldingTest2 ROSE_DLL EDG ${link_with_libraries})
+target_link_libraries(constantFoldingTest2 ROSE_DLL ${link_with_libraries})
 
 add_test(
   NAME constantFoldingTest_1
