--- a/tests/nonsmoke/functional/roseTests/astMergeTests/CMakeLists.txt
+++ b/tests/nonsmoke/functional/roseTests/astMergeTests/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(testMerge testMerge.C)
-target_link_libraries(testMerge ROSE_DLL EDG ${link_with_libraries})
+target_link_libraries(testMerge ROSE_DLL ${link_with_libraries})
 install(TARGETS testMerge DESTINATION bin)
 
 add_test(
