Disable EDG frontend and enable Clang/LLVM 20/21 frontend build (#1)
## Summary

This PR completes the migration from the proprietary EDG frontend to the
open-source Clang/LLVM 21 frontend by implementing EDG stub functions
and removing all EDG dependencies from the build system. REX now builds
successfully with the Clang frontend.

## Goal

Enable REX to build successfully with the Clang/LLVM 21 frontend instead
of the proprietary EDG frontend, allowing the project to use open-source
tools throughout the compilation pipeline.

## Issues Encountered

### 1. Missing enable-clang-frontend CMake option
The build script (`build-rex.sh`) used the `-Denable-clang-frontend=ON`
option, but this option wasn't defined in `CMakeLists.txt`. This caused
CMake to ignore the flag and attempt to download EDG anyway, resulting
in configuration failures.

### 2. Missing EDG target objects
`src/CMakeLists.txt` referenced several EDG-related CMake target objects
that didn't exist when using the Clang frontend:
- `$<TARGET_OBJECTS:EDG>`
- `$<TARGET_OBJECTS:edg_internal>`
- `$<TARGET_OBJECTS:newsage>`

This caused CMake generation errors: "Objects of target 'EDG' referenced
but no such target exists"

### 3. Linker errors for missing EDG symbols
Multiple test executables and the main ROSE library had undefined
references to EDG symbols:
- `edg_main(int, char**, SgSourceFile&)`
- `EDG_ROSE_Translation::edg_include_file_map`
- `EDG_ROSE_Translation::suppress_detection_of_transformations`
- `vtable for FixupTypeReferencesOnMemoryPool`

Build errors: `/usr/bin/ld: cannot find -lEDG: No such file or
directory`

### 4. EDG dummy library not built for Clang frontend
The dummy EDG library (containing stubs) was only created when C support
was completely disabled (`enable-c=OFF`). When building with C support
enabled via Clang frontend, the dummy library wasn't built, leaving EDG
symbols undefined.

## Solutions Implemented

### 1. Define enable-clang-frontend CMake option
**File: `CMakeLists.txt

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,56 +15,61 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        gnu: [9]
+        llvm: [20]
 
     runs-on: ${{ matrix.os }}
-    env:
-      LD_LIBRARY_PATH: /usr/lib/jvm/java-17-openjdk-amd64/lib/server
+
+    defaults:
+      run:
+        shell: bash
 
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-        token: ${{ secrets.SUBMODULE_TOKEN }}
 
     # NOTE: Ubuntu 24.04 ships antlr4 v4.9 but antlr4-cpp-runtime v4.10, which are API-incompatible; manually install the matching antlr4 v4.10.
     - uses: StoneMoe/setup-antlr4@v4.10.1
 
+    # CRITICAL: Install ONLY version-specific packages from official Ubuntu repos
+    # NEVER install generic "llvm" or "clang" packages - always use versioned packages (llvm-20, clang-20, etc.)
     - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          automake \
-          autotools-dev \
           bison \
           build-essential \
           cmake \
+          clang-${{ matrix.llvm }} \
           curl \
           flex \
-          g++-${{ matrix.gnu }} \
+          g++ \
           gdb \
-          gfortran-${{ matrix.gnu }} \
           ghostscript \
           git \
           graphviz \
           libantlr4-runtime-dev \
           libboost-all-dev \
+          libclang-${{ matrix.llvm }}-dev \
           libtool \
+          llvm-${{ matrix.llvm }} \
+          llvm-${{ matrix.llvm }}-dev \
           openjdk-17-jdk \
           python3-dev
 
-    - name: Configure
+    # Simplified build using build-rex.sh script
+    - name: Build and Install
+      env:
+        # Set up LLVM 20 paths so "clang" command resolves to clang-20
+        PATH: /usr/lib/llvm-${{ matrix.llvm }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+        LD_LIBRARY_PATH: /usr/lib/llvm-${{ matrix.llvm }}/lib:/usr/lib/jvm/java-17-openjdk-amd64/lib/server
+        CMAKE_PREFIX_PATH: /usr/lib/llvm-${{ matrix.llvm }}
+        LLVM_DIR: /usr/lib/llvm-${{ matrix.llvm }}
+        CC: clang-${{ matrix.llvm }}
+        CXX: clang++-${{ matrix.llvm }}
       run: |
         cd $GITHUB_WORKSPACE
-        mkdir ../rex_build
-        cd ../rex_build
-        CC=gcc-${{ matrix.gnu }} CXX=g++-${{ matrix.gnu }} FC=gfortran-${{ matrix.gnu }} \
-          cmake -Denable-c=ON -Denable-fortran=ON -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/../rex_install -Ddisable-tests-directory=ON $GITHUB_WORKSPACE
+        ./build-rex.sh $GITHUB_WORKSPACE/../rex_install
 
-    - name: Build
-      run: |
-        cd $GITHUB_WORKSPACE/../rex_build
-        cmake --build . -j2
-        make install -j2
-
-    # Currently, we don't have working tests for CMake builds.
+    # Note: Some tests are disabled due to removed boost graph headers (deBoost effort)
+    # See tests/nonsmoke/functional/roseTests/astProcessingTests/CMakeLists.txt for details
