--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,45 @@ endif()
 # EDG (Edison Design Group) frontend C/C++ compiler
 ########################################################################################################################
 
+# Clang/LLVM frontend option (default since EDG is removed)
+option(enable-clang-frontend "Enable Clang/LLVM frontend instead of EDG" ON)
+if(enable-clang-frontend)
+  message(STATUS "Clang/LLVM frontend enabled - EDG will be skipped")
+  set(ROSE_USE_CLANG_FRONTEND 1)
+  add_definitions(-DROSE_USE_CLANG_FRONTEND)
+
+  # Find LLVM/Clang (required for Clang frontend)
+  find_package(LLVM REQUIRED CONFIG)
+  find_package(Clang REQUIRED CONFIG)
+
+  message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+  message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+  message(STATUS "LLVM include dirs: ${LLVM_INCLUDE_DIRS}")
+
+  # Get LLVM libraries needed for the Clang frontend
+  # Must include all components that Clang static libraries depend on
+  llvm_map_components_to_libnames(LLVM_LIBS
+    support core irreader
+    option mc mcparser
+    binaryformat bitreader bitwriter
+    profiledata
+    target targetparser
+    frontendopenmp)
+
+  # Clang libraries needed
+  set(CLANG_LIBS
+    clangFrontend
+    clangDriver
+    clangSerialization
+    clangParse
+    clangSema
+    clangAnalysis
+    clangEdit
+    clangAST
+    clangLex
+    clangBasic)
+endif()
+
 # Default EDG version
 set(EDG_VERSION "5.0" CACHE STRING "major.minor version number for EDG (e.g. 5.0).")
 string(SUBSTRING ${EDG_VERSION} 0 1 EDG_MAJOR_VERSION)
@@ -351,10 +390,10 @@ else()
 endif()
 
 # Check if we should download the EDG binary tarball. We only need to download it if we're not compiling the
-# EDG source code and ROSE is configured to analyze C (and C++).
+# EDG source code and ROSE is configured to analyze C (and C++) and NOT using Clang frontend.
 if(NOT have_EDG_source)
   set(BINARY_EDG 0)
-  if(enable-c)
+  if(enable-c AND NOT enable-clang-frontend)
     set(BINARY_EDG 1)
     if(NOT WIN32)
       message(STATUS "EDG - downloading EDG-${EDG_VERSION} binary tar file")
