--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,7 +96,6 @@ set(rose_LIB_SRCS
   $<TARGET_OBJECTS:util_support>
   $<TARGET_OBJECTS:util_graphs>
   $<TARGET_OBJECTS:unparser>
-  $<TARGET_OBJECTS:EDG>
   $<TARGET_OBJECTS:sage3>
   $<TARGET_OBJECTS:virtualCFG>
   $<TARGET_OBJECTS:astFixup>
@@ -122,9 +121,11 @@ if(NOT enable-internalFrontendDevelopment)
     $<TARGET_OBJECTS:midend_loopproc>)
 endif()
 
-# TODO Conditional either EDG or CLang or nothing
-if(enable-cpp)
-  list(APPEND rose_LIB_SRCS $<TARGET_OBJECTS:edg_internal> $<TARGET_OBJECTS:newsage>)
+# Add Clang frontend objects when enabled
+# Note: libroseClangFrontend is only created when both enable-c AND enable-clang-frontend are ON
+if(enable-c AND enable-clang-frontend)
+  list(APPEND rose_LIB_SRCS
+    $<TARGET_OBJECTS:libroseClangFrontend>)
 endif()
 
 ########################################################################################################################
@@ -137,7 +138,18 @@ add_dependencies(ROSE_DLL roseUtil)
 
 set_target_properties(ROSE_DLL PROPERTIES OUTPUT_NAME "rose")
 
-target_link_libraries(ROSE_DLL ${link_with_libraries})
+# Link EDG library (either real EDG or dummy stubs when using Clang frontend)
+if(enable-c)
+  target_link_libraries(ROSE_DLL EDG ${link_with_libraries})
+else()
+  target_link_libraries(ROSE_DLL ${link_with_libraries})
+endif()
+
+# Link LLVM and Clang libraries when using Clang frontend
+# Note: Only link when both enable-c AND enable-clang-frontend are ON
+if(enable-c AND enable-clang-frontend)
+  target_link_libraries(ROSE_DLL ${CLANG_LIBS} ${LLVM_LIBS})
+endif()
 
 set_target_properties(ROSE_DLL PROPERTIES
   VERSION 1.0.0
@@ -203,7 +215,7 @@ endif ()
 
 # If the C preprocessor is enabled, ROSE has some additional depenendencies
 if(enable-cpp)
-  add_dependencies(ROSE_DLL ROSE_PREPROCESSOR ${edg_lib} libhpdf generate_rosePublicConfig)
+  add_dependencies(ROSE_DLL ROSE_PREPROCESSOR libhpdf generate_rosePublicConfig)
 endif()
 
 ########################################################################################################################
