--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/frontend/SageIII/ompparser"]
 	path = src/frontend/SageIII/ompparser
-	url = https://github.com/passlab/ompparser.git
+	url = https://github.com/ouankou/ompparser.git
 [submodule "src/frontend/SageIII/accparser"]
 	path = src/frontend/SageIII/accparser
 	url = https://github.com/ouankou/accparser.git
